project/logs/20250626_180242.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Qembed_debug:3:16: error: use of undeclared identifier 'Material'
ConstantBuffer<Material> gMaterial0 : register(b0);
               ^
Qembed_debug:4:16: error: use of undeclared identifier 'Material'; did you mean 'gMaterial0'?
ConstantBuffer<Material> gMaterial1 : register(b1);
               ^~~~~~~~
               gMaterial0
Qembed_debug:3:26: note: 'gMaterial0' declared here
ConstantBuffer<Material> gMaterial0 : register(b0);
                         ^
Qembed_debug:5:16: error: use of undeclared identifier 'Material'
ConstantBuffer<Material> gMaterial2 : register(b2);
               ^
Qembed_debug:11:1: error: unknown type name 'SampleState'; did you mean 'SamplerState'?
SampleState gSample : register(s0);
^~~~~~~~~~~
SamplerState
note: 'SamplerState' declared here
Qembed_debug:29:20: error: use of undeclared identifier 'gMaterial'
    output.color = gMaterial.color * textureColor;
                   ^

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

